# Thesis_OCR

./: .gitignore  README.md  pdf_reader.py  pyproject.toml
Data/: Departments_DTU_all.json  department_classification.json  extracted_metrics.csv  extracted_metrics_LOCAL.csv  extracted_metrics_fig-tab-ref.csv  extracted_metrics_reorder.csv
exploring_data/: 2023_trends_analysis_notebook.ipynb  BACKUP_data_analysis_notebook.ipynb  Cleaning_Orbit_Meta.ipynb  PROD_exploring_data.py  SANDBOX_Exploring_track1.ipynb  data_analysis_notebook.ipynb  explorative_data_analysis_notebook.ipynb
exstraction_more_from_pdf/: STOP_exstensive_metrics_from_pdfs.ipynb  equation_page_detection.py  equation_pipeline.py  equation_region_proposal.py  equation_render.py  equation_schema.py  equation_text_extract.py  equation_triage.py  equation_verify.py  exstensive_metrics_from_pdfs.ipynb  gcp_equation_pages_from_results.py  gcp_equations_from_pdfs.py  gcp_linguistics_exstractor.py  gcp_metrics_from_pdfs.py  gcp_num_fig-tab-ref_exstractor.py  gcp_seasonality_from_pdfs.py  linguistics_exstractor.ipynb  local_metrics_from_pdfs.py  local_supervisors_from_pdfs.py  master_df_joiner.ipynb  master_thesis_metrics_analysis.ipynb  metrics_from_pdfs.ipynb  seasonality_from_pdf.ipynb  seasonality_merge_and_export.ipynb  seasonality_merge_and_export.py  thesis_exstractor_lm_local.ipynb  thesis_stats_extractor.ipynb
pdf_reader/: Exploring_track1.ipynb  FoundLocal_TEST1.py  GCP_connector.py  README.md  SANDBOX_Exploring_track1.ipynb  SI_options.json  SI_options.py  SI_versions.json  extract_sections.py  (+8 more)
(+20 files in other folders)
