[project]
name = "pdf-reader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pypdf>=6.7.0",
    "openpyxl>=3.0.0",
    "openai>=1.0.0",
    "matplotlib>=3.10.8",
    "pyarrow>=17.0.0",
    "pandas>=3.0.1",
    "google-cloud-storage>=3.9.0",
    "ipykernel>=7.2.0",
    "spacy>=3.8.11",
]
